--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -7,6 +7,10 @@
         "pdf":"pdf",
         "download":"pobierz"
     },
+    "result":{
+        "inputData":"Dane wejściowe",
+        "result":"Wynik konwersji"
+    },
     "learningSection":{
 
     },
