--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -1,5 +1,5 @@
 {   
-    "headerText": "Kodowanie wiadomości Tekstowej/Binarnej",
+    "headerText": "Kodowanie Wiadomości Tekstowej/Binarnej",
     "changeLanguage": "change to english",
     "menuButtons":{
         "learning": "nauka",
